# COSpawnSnack

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  config.example.json  config.json  vcpkg.json
docs/: ARCHITECTURE.md  BUILD.md  CALIBRATION.md  SETUP_CLION.md  TESTING.md  webview2_forensic_checklist.md
src/: main.cpp
src/capture/: screen_capture.cpp  screen_capture.h
src/core/: app_config.cpp  app_config.h  browser_finder.cpp  browser_finder.h  config.cpp  config.h  engine.cpp  engine.h  logger.cpp  logger.h  os_check.cpp  os_check.h  string_util.h  types.h
src/detection/: hud_detector.cpp  hud_detector.h  result_detector.cpp  result_detector.h
src/focus/: focus_controller.cpp  focus_controller.h
src/state/: state_machine.cpp  state_machine.h
src/ui/: app_window.cpp  app_window.h  native_ui.cpp  native_ui.h  resource.h  resources.rc.in  settings_dialog.h  tray.h  webview2_controller.cpp  webview2_controller.h
src/ui/web/: index.html
src/video/: browser_video_target.cpp  browser_video_target.h  chrome_douyin_target.cpp  chrome_douyin_target.h  ivideo_target.h  media_controller.cpp  media_controller.h
tools/: diag_live.py  extract_bar_template.py  extract_equipment_template.py  generate_icon.py  test_ocr_static.py
